force-app/main/default/objects/ssot__User__dlm/fields/ssot__BadgeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__BadgeText__c</fullName>
    <label>Badge Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BadgeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>