force-app/main/default/objects/ssot__User__dlm/fields/ssot__CommunityNickname__c.field-meta.xml
<CustomField>
    <fullName>ssot__CommunityNickname__c</fullName>
    <label>Community Nickname</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CommunityNickname</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>