force-app/main/default/objects/ssot__User__dlm/fields/ssot__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__CountryCode__c</fullName>
    <label>Country Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CountryCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>