force-app/main/default/objects/ssot__User__dlm/fields/ssot__DelegatedApproverId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DelegatedApproverId__c</fullName>
    <label>Delegated Approver</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DelegatedApproverId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>