force-app/main/default/objects/ssot__User__dlm/fields/ssot__Email__c.field-meta.xml
<CustomField>
    <fullName>ssot__Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Email</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>