force-app/main/default/objects/ssot__User__dlm/fields/ssot__EmailSignature__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmailSignature__c</fullName>
    <label>Email Signature</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailSignature</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>