force-app/main/default/objects/ssot__User__dlm/fields/ssot__Extension__c.field-meta.xml
<CustomField>
    <fullName>ssot__Extension__c</fullName>
    <label>Extension</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Extension</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>