force-app/main/default/objects/ssot__User__dlm/fields/ssot__ForecastEnabled__c.field-meta.xml
<CustomField>
    <fullName>ssot__ForecastEnabled__c</fullName>
    <label>Forecast Enabled</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ForecastEnabled</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>