force-app/main/default/objects/ssot__User__dlm/fields/ssot__LastPasswordChangeDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastPasswordChangeDate__c</fullName>
    <label>Last Password Change Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastPasswordChangeDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>