force-app/main/default/objects/ssot__User__dlm/fields/ssot__OfflineTrialExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__OfflineTrialExpirationDate__c</fullName>
    <label>Offline Trial Expiration Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OfflineTrialExpirationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>