force-app/main/default/objects/ssot__User__dlm/fields/ssot__ReceivesAdminInfoEmails__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReceivesAdminInfoEmails__c</fullName>
    <label>Receives Admin Info Emails</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReceivesAdminInfoEmails</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>