force-app/main/default/objects/ssot__User__dlm/fields/ssot__SenderName__c.field-meta.xml
<CustomField>
    <fullName>ssot__SenderName__c</fullName>
    <label>Sender Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SenderName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>