force-app/main/default/objects/ssot__User__dlm/fields/ssot__StayInTouchSubject__c.field-meta.xml
<CustomField>
    <fullName>ssot__StayInTouchSubject__c</fullName>
    <label>Stay In Touch Subject</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StayInTouchSubject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>