force-app/main/default/objects/ssot__User__dlm/fields/ssot__User_UserGroupId_map_UserGroup_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__User_UserGroupId_map_UserGroup_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User_UserGroupId_map_UserGroup_Id_N_1</label>
    <referenceTo>ssot__UserGroup__dlm</referenceTo>
    <relationshipLabel>User_UserGroupId_map_UserGroup_Id_N_1</relationshipLabel>
    <relationshipName>User_UserGroupId_map_UserGroup_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>