force-app/main/default/objects/ssot__User__dlm/fields/ssot__Username__c.field-meta.xml
<CustomField>
    <fullName>ssot__Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Username</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>